# packages/api-client/src/openapi.yaml
@@ -1461,6 +1461,11 @@ paths:
       - feed-controller
       operationId: list_10
       parameters:
+      - name: filter
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/FeedFilter"
       - name: cursorLimit
         in: query
         required: true
@@ -3684,6 +3689,36 @@ components:
         nextCursor:
           type: integer
           format: int64
+    FeedFilter:
+      type: object
+      properties:
+        role:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProfileRole"
+          uniqueItems: true
+        trades:
+          type: array
+          items:
+            $ref: "#/components/schemas/Trade"
+          uniqueItems: true
+        minExperience:
+          type: integer
+          format: int32
+        maxExperience:
+          type: integer
+          format: int32
+        states:
+          type: array
+          items:
+            $ref: "#/components/schemas/Region"
+          uniqueItems: true
+        start:
+          type: string
+          format: date
+        end:
+          type: string
+          format: date
     ApiResponseCursorPageFeedResponse:
       type: object
       properties:
